Reasoning on part selection of the CC3220.

--- a/design-details/mcu.tex
+++ b/design-details/mcu.tex
@@ -1,4 +1,5 @@
 \subsection{Controller Subsystem}
+\label{sec:controller_subsystem}
 \begin{figure}[H]
     \caption{MCU block diagram}
     \centering
