Further update of MCU HW design, added bitwise command encoding fig

--- a/InitialDocument.tex
+++ b/InitialDocument.tex
@@ -1,4 +1,5 @@
 \documentclass[12pt]{article}
+\usepackage{gensymb}
 \usepackage[top=1in,left=1.5in,right=1in]{geometry}
 \usepackage{graphicx}
 \usepackage{float}
